--- a/scene/layers/roads.yaml
+++ b/scene/layers/roads.yaml
@@ -25,8 +25,12 @@ layers:
             filter: { source: 'naturalearthdata.com' }
             draw:
                 lines:
-                    color: [[5,[0.463,0.800,0.824]],[6,[0.541,0.969,0.949]]]
-                    width: [[5,0.5px],[6,0.75px]]
+                    style: glow_lines
+                    # color: [[5,[0.463,0.800,0.824]],[6,[0.541,0.969,0.949]]]
+                    # width: [[5,0.5px],[6,10px]]
+                    color: [0.463,0.800,0.824]
+                    width: [[5,2.5px],[7,5px]]
+
                     # outline:
                     #     color: [0.541,0.969,0.949]
                     #     width: [[5,0px],[6,0px]]
@@ -47,19 +51,64 @@ layers:
 
         roads-highway:
             filter: { kind: highway }
-            draw:
-                lines:
-                    color: [0.086,0.135,0.260]
-                    width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,5px],[17,5px],[18,6px]]
-                    outline:
-                        # color: [0.541,0.969,0.949]
-                        color: [0.689,0.970,0.956]
-                        width: [[8,0.5px],[9,0.6px],[12,1px],[15,1px],[16,1.5px],[17,0px]]
-                roads-highway-dashed:
-                    order: function () { return (feature.sort_key * 10 - 1); }
-                    #order: 540
-                    color: [0.557,0.909,0.887]
-                    width: [[8,0px],[16,0px],[17,7px],[18,8px]]
+            roads-highway-z8:
+                filter:
+                    $zoom: { min: 8, max: 11 }
+                draw:
+                    lines:
+                        style: glow_lines
+                        color: [0.463,0.800,0.824]
+                        width: [[8,5px],[11,9px]]
+
+            roads-highway-z11:
+                filter:
+                    $zoom: { min: 11 }
+                draw:
+                    lines:
+                        color: [0.086,0.135,0.260]
+                        width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,5px],[17,5px],[18,6px],[19,12px]]
+                        outline:
+                            # color: [0.541,0.969,0.949]
+                            color: [0.689,0.970,0.956]
+                            width: [[8,0.5px],[9,1px],[12,1.25px],[15,1.5px],[16,1.5px],[17,0px]]
+                    roads-highway-dashed:
+                        order: function () { return (feature.sort_key * 10 - 1); }
+                        #order: 540
+                        # color: [0.557,0.909,0.887]
+                        color: [0.306,0.361,0.949]
+                        width: [[8,0px],[16,0px],[17,7px],[18,10px],[19,20px]]
+
+                roads-highway-link:
+                    filter: { is_link: yes } # on- and off-ramps, etc
+                    draw:
+                        lines:
+                            width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px],[17,3px]]
+                            outline:
+                                color: [0.481,0.842,0.890]
+                                width: [[8,0px],[9,0.5px],[15,1px]]
+                        roads-highway-dashed:
+                            visible: false
+                        roads-highway-casing1:
+                            visible: false
+                        roads-highway-casing2:
+                            visible: false
+                        roads-highway-casing3:
+                            visible: false
+                        roads-highway-casing4:
+                            visible: false
+
+                    roads-highway-link-early:
+                        filter: { $zoom: { min: 13, max: 15 } }
+                        draw:
+                            lines:
+                                order: 352
+                            roads-highway-dashed:
+                                visible: false
+                        roads-highway-link-early-z17-18:
+                            filter: { $zoom: [17, 18]}
+                            draw:
+                                lines:
+                                    visible: false
 
             # Show 0 width roads one zoom before they have width, so they can scale up instead of popping in
             roads-highway-z17:
@@ -71,13 +120,13 @@ layers:
                         #order: 538
                         order: function () { return (feature.sort_key * 10 - 2); }
                         color: [0.086,0.135,0.260]
-                        width: [[8,0px],[16,0px],[17,12px],[18,15px]]
+                        width: [[8,0px],[16,0px],[17,12px],[18,15px],[19,28px]]
                     roads-highway-casing2:
                         style: lines
                         #order: 536
                         order: function () { return (feature.sort_key * 10 - 3); }
                         color: [0.541,0.969,0.949]
-                        width: [[8,0px],[16,0px],[17,16px],[18,18px]]
+                        width: [[8,0px],[16,0px],[17,16px],[18,18px],[19,31px]]
             roads-highway-z18:
                 filter: 
                     $zoom: { min: 17 }
@@ -87,44 +136,13 @@ layers:
                         #order: 534
                         order: function () { return (feature.sort_key * 10 - 4); }
                         color: [0.086,0.135,0.260]
-                        width: [[8,0px],[16,0px],[17,15px],[18,22px]]
+                        width: [[8,0px],[16,0px],[17,15px],[18,22px],[19,40px]]
                     roads-highway-casing4:
                         style: lines
                         #order: 532
                         order: function () { return (feature.sort_key * 10 - 5); }
                         color: [0.800,1.000,0.987]
-                        width: [[8,0px],[16,0px],[17,15px],[18,26px]]
-
-            roads-highway-link:
-                filter: { is_link: yes } # on- and off-ramps, etc
-                draw:
-                    lines:
-                        width: [[8,0px],[9,0px],[11,0.25px],[12,0.25px],[13,1px],[14,1.5px],[15,2px]]
-                        outline:
-                            width: [[8,0px],[9,0.5px]]
-                    roads-highway-dashed:
-                        visible: false
-                    roads-highway-casing1:
-                        visible: false
-                    roads-highway-casing2:
-                        visible: false
-                    roads-highway-casing3:
-                        visible: false
-                    roads-highway-casing4:
-                        visible: false
-
-                roads-highway-link-early:
-                    filter: { $zoom: { min: 13, max: 15 } }
-                    draw:
-                        lines:
-                            order: 352
-                        roads-highway-dashed:
-                            visible: false
-                    roads-highway-link-early-z17-18:
-                        filter: { $zoom: [17, 18]}
-                        draw:
-                            lines:
-                                visible: false
+                        width: [[8,0px],[16,0px],[17,15px],[18,26px],[19,45px]]
 
             roads-highway-tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
@@ -171,4 +189,26 @@ styles:
         shaders:
             blocks:
                 position: |
-                    v_texcoord.y *= 3.;
+                    v_texcoord.y *= 4.;
+    glow_lines:
+        base: lines
+        texcoords: true
+        blend: inlay
+        shaders:
+            defines:
+                GLOW_LINES_WIDTH: 0.1
+                GLOW_LINES_AMOUNT: .75
+            blocks:
+                global: |
+                    float pulse(float c, float w, float x ) {
+                        x = abs(x - c);
+                        if( x>w ) return 0.0;
+                        x /= w;
+                        return 1.0 - x*x*(3.0-2.0*x);
+                    }
+                color: |
+                    vec4 line_color = color;
+                    color = vec4(0.0);
+                    // color = mix(color, line_color*GLOW_LINES_AMOUNT, sin(v_texcoord.x*3.145));
+                    color = mix(color, line_color,pulse(.5,GLOW_LINES_WIDTH,v_texcoord.x));
+                    color += line_color*GLOW_LINES_AMOUNT*sin(v_texcoord.x*3.145);
