--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -4,7 +4,6 @@ layers:
         filter: { not: { kind: rail } }
         draw:
             lines:
-                styles: roads
                 width: 1px
                 order: global.order
                 outline:
@@ -72,8 +71,7 @@ layers:
                             color: [0.689,0.970,0.956]
                             width: [[8,0.5px],[9,1px],[12,1.25px],[15,1.5px],[16,1.5px],[17,0px]]
                     roads-highway-dashed:
-                        order: function () { return (feature.sort_key * 10 - 1); }
-                        #order: 540
+                        order: global.order_sub_1
                         # color: [0.557,0.909,0.887]
                         color: [0.306,0.361,0.949]
                         width: [[8,0px],[16,0px],[17,7px],[18,10px],[19,20px]]
@@ -117,30 +115,27 @@ layers:
                 draw:
                     roads-highway-casing1:
                         style: lines
-                        #order: 538
-                        order: function () { return (feature.sort_key * 10 - 2); }
+                        order: global.order_sub_2
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[16,0px],[17,12px],[18,15px],[19,28px]]
                     roads-highway-casing2:
                         style: lines
-                        #order: 536
-                        order: function () { return (feature.sort_key * 10 - 3); }
+                        order: global.order_sub_3
                         color: [0.541,0.969,0.949]
                         width: [[8,0px],[16,0px],[17,16px],[18,18px],[19,31px]]
+
             roads-highway-z18:
                 filter: 
                     $zoom: { min: 17 }
                 draw:
                     roads-highway-casing3:
                         style: lines
-                        #order: 534
-                        order: function () { return (feature.sort_key * 10 - 4); }
+                        order: global.order_sub_4
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[16,0px],[17,15px],[18,22px],[19,40px]]
                     roads-highway-casing4:
                         style: lines
-                        #order: 532
-                        order: function () { return (feature.sort_key * 10 - 5); }
+                        order: global.order_sub_5
                         color: [0.800,1.000,0.987]
                         width: [[8,0px],[16,0px],[17,15px],[18,26px],[19,45px]]
 
@@ -179,9 +174,6 @@ layers:
                             width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px]]
 
 styles:
-    roads:
-        base: lines
-
     roads-highway-dashed:
         base: lines
         dash: [1,1]
@@ -193,11 +185,12 @@ styles:
     glow_lines:
         base: lines
         texcoords: true
-        blend: inlay
+        blend: add
         shaders:
             defines:
                 GLOW_LINES_WIDTH: 0.1
-                GLOW_LINES_AMOUNT: .75
+                GLOW_LINES_BRIGHTNESS: .25
+                GLOW_LINES_GLOW: .75
             blocks:
                 global: |
                     float pulse(float c, float w, float x ) {
@@ -209,6 +202,5 @@ styles:
                 color: |
                     vec4 line_color = color;
                     color = vec4(0.0);
-                    // color = mix(color, line_color*GLOW_LINES_AMOUNT, sin(v_texcoord.x*3.145));
-                    color = mix(color, line_color,pulse(.5,GLOW_LINES_WIDTH,v_texcoord.x));
-                    color += line_color*GLOW_LINES_AMOUNT*sin(v_texcoord.x*3.145);
+                    color = mix(color, line_color*GLOW_LINES_BRIGHTNESS,pulse(.5,GLOW_LINES_WIDTH,v_texcoord.x));
+                    color += line_color*GLOW_LINES_BRIGHTNESS*GLOW_LINES_GLOW*sin(v_texcoord.x*3.145);
