--- a/layers/boundaries.yaml
+++ b/layers/boundaries.yaml
@@ -6,7 +6,7 @@ layers:
                 order: global.order
                 color: black
 
-        boundaries-country:
+        country:
             filter:
                 any:
                     - type: country
@@ -15,13 +15,13 @@ layers:
             draw:
                 lines:
                     width: [[1, 0px], [3, 0px], [4, 1.5px], [9, 2.5px], [14, 3.5px], [16, 4.5px], [17, 14m]]
-            boundaries-country-water:
+            water:
                 filter: { maritime_boundary: yes }
                 draw:
                     lines:
                         visible: false
 
-        boundaries-region:
+        region:
             filter:
                 any:
                     - type: state
@@ -35,12 +35,12 @@ layers:
                 lines:
                     color: black
                     width: [[0, 0px], [5, 0px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
-            boundaries-region-water:
+            water:
                 filter: { maritime_boundary: yes }
                 draw:
                     lines:
                         visible: false
-            boundaries-region-early:
+            early:
                 filter: { scalerank: [0,3,4,5,6,7,8,9,10], $zoom: { max: 8 } }
                 draw:
                     lines:
