--- a/layers/landuse.yaml
+++ b/layers/landuse.yaml
@@ -5,7 +5,7 @@ layers:
             polygons:
                 order: global.order
                 visible: false
-        landuse-tier1:
+        tier1:
             filter:
                 any:
                     # limit show smaller landuse areas to higher zooms
@@ -24,7 +24,7 @@ layers:
                     - { $zoom: { min: 15 }, area: { min: 20000 } }
                     - { $zoom: { min: 15 }, area: { min: 2000 } }
                     - { $zoom: { min: 16 } }
-            landuse-tier1-national_park:
+            national_park:
                 filter: { kind: [national_park, "park or protected land", battlefield], not: { operator: [ "United States Forest Service", "US Forest Service", "U.S. Forest Service", "USDA Forest Service" ] } }
                 draw:
                     polygons:
@@ -33,7 +33,7 @@ layers:
                         color: [0.402,0.568,0.818]
                         order: 18
                         visible: true
-                landuse-tier1-us_national_park:
+                us_national_park:
                     # yosemite national park, death valley national park, grand canyon national park
                     filter: { operator: [ "United States National Park Service", "US National Park Service" ] }
                     draw:
@@ -41,7 +41,7 @@ layers:
                             # color: [0.214,0.690,0.611]
                             color: [0.340,0.703,1.000]
                             visible: true
-        landuse-tier2:
+        tier2:
             filter:
                 any:
                     # limit show smaller landuse areas to higher zooms
@@ -59,7 +59,7 @@ layers:
                     - { $zoom: { min: 15 }, area: { min: 20000 } }
                     - { $zoom: { min: 15 }, area: { min: 2000 } }
                     - { $zoom: { min: 16 } }
-            landuse-tier2-conservation:
+            conservation:
                 filter:
                     kind: [conservation, protected_area, nature_reserve]
                     $zoom: { min: 4 }
@@ -69,7 +69,7 @@ layers:
                         # color: [0.214,0.690,0.611]
                         color: [0.000,0.649,0.829]
                         visible: true
-                landuse-tier2-conservation-wilderness_areas:
+                wilderness_areas:
                     filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
                     draw:
                         polygons:
@@ -77,14 +77,14 @@ layers:
                             order: 25
                             color: [0.239,0.329,0.463]
                             visible: true
-                # landuse-tier2-conservation-national_forest_level_6:
+                # national_forest_level_6:
                 #     filter: { protect_class: ["6",6] }
                 #     draw:
                 #         polygons:
                 #             style: landuse-tier2-conservation
                 #             color: red
                 #             visible: true
-            landuse-tier2-farm:
+            farm:
                 filter:
                     kind: [farm, farmland]
                     $zoom: { min: 10 }
@@ -93,9 +93,9 @@ layers:
                         style: landuse-tier2-farm
                         color: [0.174,0.462,0.527]
                         visible: true
-            landuse-tier2-forest:
+            forest:
                 filter: { kind: [forest,wood], $zoom: { min: 6 } }
-                landuse-tier2-forest-national:
+                national-forest:
                     filter:
                         operator: [ "United States Forest Service", "US Forest Service", "U.S. Forest Service", "USDA Forest Service" ]
                     draw:
@@ -103,7 +103,7 @@ layers:
                             color: red
                             visible: true
 
-                landuse-tier2-forest-no_national:
+                landuse-forest:
                     filter:
                         not: { operator: [ "United States Forest Service", "US Forest Service", "U.S. Forest Service", "USDA Forest Service" ] }
                         $zoom: { min: 6 }
@@ -114,7 +114,15 @@ layers:
                             color: [0.238,0.529,0.820]
                             visible: true
 
-            landuse-tier2-parks_and_national_forests_not_national_park:
+            nature_reserve:
+                filter: { kind: nature_reserve, $zoom: { min: 7 } }
+                wilderness-areas:
+                    filter: function() { return feature.name && feature.name.indexOf("Wilderness") > -1 }
+                    draw:
+                        polygons:
+                            color: green
+
+            parks_and_national_forests_not_national_park:
                 filter:
                     kind: [park, national_park, "park or protected land", battlefield]
                     not: { operator: [ "United States National Park Service", "US National Park Service" ] }
@@ -127,7 +135,7 @@ layers:
                         # color: [0.243,0.769,0.623]
                         color: [0.243,0.769,0.949]
                         visible: true
-        landuse-tier3:
+        tier3:
             filter:
                 any:
                     # limit show smaller landuse areas to higher zooms
@@ -142,7 +150,7 @@ layers:
                     - { $zoom: { min: 15 }, area: { min: 2000 } }
                     - { $zoom: { min: 16 } }
 
-            landuse-tier3-university:
+            university:
                 filter:
                     kind: [university, college]
                 draw:
@@ -150,7 +158,7 @@ layers:
                         style: landuse-tier3-university
                         color: yellow
                         visible: true
-        landuse-tier4:
+        tier4:
             filter:
                 any:
                     # limit show smaller landuse areas to higher zooms
@@ -162,7 +170,7 @@ layers:
                     - { $zoom: { min: 15 }, area: { min: 20000 } }
                     - { $zoom: { min: 15 }, area: { min: 2000 } }
                     - { $zoom: { min: 16 } }
-            landuse-tier4-golf_course:
+            golf_course:
                 filter:
                     kind: golf_course
                 draw:
