--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -8,19 +8,19 @@ layers:
                 order: global.order
                 outline:
                     order: 352
-        roads-early:
+        early:
             filter: { $zoom: { max: 15} }
             draw:
                 lines:
                     outline:
                         order: global.order
-        roads-bridges_and_tunnels:
+        bridges_and_tunnels:
             filter: { any: [is_bridge: yes, is_tunnel: yes] }
             draw:
                 lines:
                     outline:
                         order: global.order
-        roads-natural_earth_highways:
+        natural_earth_highways:
             filter: { source: 'naturalearthdata.com' }
             draw:
                 lines:
@@ -28,12 +28,12 @@ layers:
                     # color: [[5,[0.463,0.800,0.824]],[6,[0.541,0.969,0.949]]]
                     # width: [[5,0.5px],[6,10px]]
                     color: [0.463,0.800,0.824]
-                    width: [[5,2.5px],[7,5px]]
+                    width: [[5,1.5px],[7,5px]]
 
                     # outline:
                     #     color: [0.541,0.969,0.949]
                     #     width: [[5,0px],[6,0px]]
-            roads-natural_earth_highways-major_road:
+            major_road:
                 filter: { type: ['Secondary Highway','Road'] }
                 draw:
                     lines:
@@ -41,16 +41,16 @@ layers:
                         width: [[5,0.5px],[6,0.75px]]
                         # outline:
                         #     width: 1px
-            roads-natural_earth_highways-minor_road:
+            minor_road:
                 filter: { type: 'Unknown' }
                 draw:
                     lines:
                         color: [0.333,0.518,0.612]
                         width: 0.5px
 
-        roads-highway:
+        highway:
             filter: { kind: highway }
-            roads-highway-z8:
+            highway-z8:
                 filter:
                     $zoom: { min: 8, max: 11 }
                 draw:
@@ -59,24 +59,24 @@ layers:
                         color: [0.463,0.800,0.824]
                         width: [[8,5px],[11,9px]]
 
-            roads-highway-z11:
+            highway-z11:
                 filter:
                     $zoom: { min: 11 }
                 draw:
                     lines:
                         color: [0.086,0.135,0.260]
-                        width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,5px],[17,5px],[18,6px],[19,12px]]
+                        width: [[8,0px],[9,0.25px],[10,1px],[12,1px],[13,2px],[14,3px],[15,4px],[16,5px],[17,3px],[18,6px],[19,12px]]
                         outline:
                             # color: [0.541,0.969,0.949]
                             color: [0.689,0.970,0.956]
                             width: [[8,0.5px],[9,1px],[12,1.25px],[15,1.5px],[16,1.5px],[17,0px]]
-                    roads-highway-dashed:
+                    highway-dashed:
                         order: global.order_sub_1
                         # color: [0.557,0.909,0.887]
                         color: [0.306,0.361,0.949]
                         width: [[8,0px],[16,0px],[17,7px],[18,10px],[19,20px]]
 
-                roads-highway-link:
+                highway-link:
                     filter: { is_link: yes } # on- and off-ramps, etc
                     draw:
                         lines:
@@ -84,18 +84,21 @@ layers:
                             outline:
                                 color: [0.481,0.842,0.890]
                                 width: [[8,0px],[9,0.5px],[15,1px]]
-                        roads-highway-dashed:
+                        highway-dashed:
                             visible: false
-                        roads-highway-casing1:
+                        highway-casing1:
                             visible: false
-                        roads-highway-casing2:
+                        highway-casing2:
                             visible: false
-                        roads-highway-casing3:
+                        highway-casing3:
                             visible: false
-                        roads-highway-casing4:
+                        highway-casing4:
+                            visible: false
+                        highway-glow:
                             visible: false
 
-                    roads-highway-link-early:
+
+                    highway-link-early:
                         filter: { $zoom: { min: 13, max: 15 } }
                         draw:
                             lines:
@@ -109,37 +112,42 @@ layers:
                                     visible: false
 
             # Show 0 width roads one zoom before they have width, so they can scale up instead of popping in
-            roads-highway-z17:
+            highway-z17:
                 filter: 
                     $zoom: { min: 16 }
                 draw:
-                    roads-highway-casing1:
+                    highway-casing1:
                         style: lines
                         order: global.order_sub_2
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[16,0px],[17,12px],[18,15px],[19,28px]]
-                    roads-highway-casing2:
+                    highway-casing2:
                         style: lines
                         order: global.order_sub_3
                         color: [0.541,0.969,0.949]
                         width: [[8,0px],[16,0px],[17,16px],[18,18px],[19,31px]]
 
-            roads-highway-z18:
+            highway-z18:
                 filter: 
-                    $zoom: { min: 17 }
+                    $zoom: { min: 11 }
                 draw:
-                    roads-highway-casing3:
+                    highway-casing3:
                         style: lines
                         order: global.order_sub_4
                         color: [0.086,0.135,0.260]
                         width: [[8,0px],[16,0px],[17,15px],[18,22px],[19,40px]]
-                    roads-highway-casing4:
+                    highway-casing4:
                         style: lines
                         order: global.order_sub_5
                         color: [0.800,1.000,0.987]
                         width: [[8,0px],[16,0px],[17,15px],[18,26px],[19,45px]]
+                    highway-glow:
+                        style: glow_lines-casing
+                        order: global.order_sub_6
+                        color: [0.800,1.000,0.987]
+                        width: [[11,8px],[13,12px],[16,25px],[17,40px],[18,50px],[19,80px]]
 
-            roads-highway-tunnel:
+            highway-tunnel:
                 filter: { is_tunnel: yes, $zoom: { min: 13 } }
                 draw:
                     lines:
@@ -149,12 +157,12 @@ layers:
                             color: [0.259,0.482,0.678]
                     roads-highway-dashed:
                         visible: false
-                roads-highway-tunnel-z17-18:
+                highway-tunnel-z17-18:
                     filter: { $zoom: [17, 18]}
                     draw:
                         lines:
                             visible: false
-        roads-major_road:
+        major_road:
             filter: { kind: major_road }
             draw:
                 lines:
@@ -163,7 +171,7 @@ layers:
                     outline:
                         color: [[8,[0.278,0.499,0.667]],[12,[0.329,0.588,0.784]]]
                         width: 0.3px
-            roads-major_road-trunk_primary:
+            major_road-trunk_primary:
                 filter: { highway: [trunk, primary] }
                 draw:
                     lines:
@@ -174,7 +182,7 @@ layers:
                             width: [[8,0.25px],[10,0.3px],[11,0.3px],[12,0.75px]]
 
 styles:
-    roads-highway-dashed:
+    highway-dashed:
         base: lines
         dash: [1,1]
         dash_background_color: [0.086,0.149,0.290]
@@ -191,6 +199,29 @@ styles:
                 GLOW_LINES_WIDTH: 0.1
                 GLOW_LINES_BRIGHTNESS: .25
                 GLOW_LINES_GLOW: .75
+            blocks:
+                global: |
+                    float pulse(float c, float w, float x ) {
+                        x = abs(x - c);
+                        if( x>w ) return 0.0;
+                        x /= w;
+                        return 1.0 - x*x*(3.0-2.0*x);
+                    }
+                color: |
+                    vec4 line_color = color;
+                    color = vec4(0.0);
+                    color = mix(color, line_color*GLOW_LINES_BRIGHTNESS,pulse(.5,GLOW_LINES_WIDTH,v_texcoord.x));
+                    color += line_color*GLOW_LINES_BRIGHTNESS*GLOW_LINES_GLOW*sin(v_texcoord.x*3.145);
+
+    glow_lines-casing:
+        base: lines
+        texcoords: true
+        blend: add
+        shaders:
+            defines:
+                GLOW_LINES_WIDTH: 0.4
+                GLOW_LINES_BRIGHTNESS: .18
+                GLOW_LINES_GLOW: .65
             blocks:
                 global: |
                     float pulse(float c, float w, float x ) {
