--- a/styles/lines.yaml
+++ b/styles/lines.yaml
@@ -3,7 +3,7 @@ styles:
         base: lines
         mix: [patterns-stripes, space-tile]
         texcoords: true
-        animate: false
+        animated: false
         blend: add
         shaders:
             defines:
