--- a/styles/lines.yaml
+++ b/styles/lines.yaml
@@ -1,7 +1,6 @@
 styles:
-    coast:
+    lines-coast:
         base: lines
-        mix: [patterns-stripes, space-tile]
         texcoords: true
         animated: false
         blend: add
@@ -17,15 +16,15 @@ styles:
                     // waves
                     pct += (1.-fract(v_texcoord.x*COAST_WAVES_AMOUNT+(fract(u_time*COAST_WAVES_SPEED))))*pct;
                     color *= pct;
-
-    glow_lines:
+    lines-glow:
         base: lines
         texcoords: true
         blend: add
         shaders:
             defines:
-                GLOW_LINES_WIDTH: 0.2
-                GLOW_LINES_AMOUNT: .75
+                GLOW_WIDTH: 0.1
+                GLOW_BRIGHTNESS: .25
+                GLOW_GLOW: .75
             blocks:
                 global: |
                     float pulse(float c, float w, float x ) {
@@ -37,6 +36,5 @@ styles:
                 color: |
                     vec4 line_color = color;
                     color = vec4(0.0);
-                    // color = mix(color, line_color*GLOW_LINES_AMOUNT, sin(v_texcoord.x*3.145));
-                    color = mix(color, line_color,pulse(.5,GLOW_LINES_WIDTH,v_texcoord.x));
-                    color += line_color*GLOW_LINES_AMOUNT*sin(v_texcoord.x*3.145);
+                    color = mix(color, line_color*GLOW_BRIGHTNESS,pulse(.5,GLOW_WIDTH,v_texcoord.x));
+                    color += line_color*GLOW_BRIGHTNESS*GLOW_GLOW*sin(v_texcoord.x*3.145);
