--- a/layers/water.yaml
+++ b/layers/water.yaml
@@ -99,16 +99,17 @@ layers:
                     - { $zoom: { min: 15 } }
             draw:
                 lines:
-                    color: [0.017, 1.000, 0.649]
-                    width: [[8,0px],[20,10px]]
+                    order: global.order
+                    color: [0.155,0.482,0.910]
+                    width: [[8,0px],[13,1px],[15,1.25px],[20,8px]]
                     join: round
             boundaries-not_ocean-riverbank:
                 # river boundaries like the thames in london, la seine in paris
                 filter: { kind: riverbank }
                 draw:
                     lines:
-                        color: [0.091,0.329,0.692]
-                        width: [[8,0px],[20,10px]]
+                        color: [0.155,0.482,0.910]
+                        width: [[8,0px],[13,1px],[15,1.25px],[20,8px]]
 
 styles:
     water:
